--- a/index.html
+++ b/index.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document </title>
-    <link rel="stylesheet" href="style.css" class="css">
-</head>
-<body>
-    <h1>Javascript</h1>
-    <div class="movieList big-red">Movie</div>
-    <ul class="movieList" id="movies">
-        <li class="movie">after</li>
-        <li class="movie">you</li>
-        <li class="movie">saw</li>
-    </ul>
-    <button class="click">Dark Mode</button>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <title>Web Training | Intro component with sign up form</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="leftside">
+      <h1 class="main-heading">Learn to code by watching others</h1>
+      <p class="main-content">
+        See how experienced developers solve problems in real-time. Watching
+        scripted tutorials is great, but understanding how developers think is
+        invaluable.
+      </p>
+      </div>
+      <div class="rightside">
+      <p class="message">
+        <strong>Try it free 7 days then $20/mo. thereafter</strong>
+        </p>
+      <div class="card">
+        <form name="signupform">
+          <div class="input-group">
+            <input name="first name" type="text" placeholder="First Name" />
+            <small class="message"></small>
+          </div>
+
+          <div class="input-group">
+            <input name="last name" type="text" placeholder="Last Name" />
+            <small class="message"></small>
+          </div>
+
+          <div class="input-group">
+            <input name="Email" type="text" placeholder="Email Address" />
+            <small class="message"></small>
+          </div>
+
+          <div class="input-group">
+            <input name="password" type="password" placeholder="Password" />
+            <small class="message"></small>
+          </div>
+
+          <button id ="submitButton" class="button">
+            Claim your free trial
+          </button>
+        </form>
+        <p class="privacy-message">
+          By clicking the button, you are agreeing to our <a href="">Terms and Services</a>
+        </p>
+      </div>
+      </div>
+    </div>
     <script src="./script.js"></script>
-</body>
+  </body>
 </html>
+
