--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
         <strong>Try it free 7 days then $20/mo. thereafter</strong>
         </p>
       <div class="card">
-        <form name="signupform">
-          <div class="input-group">
-            <input name="first name" type="text" placeholder="First Name" />
+        <form name="signupForm">
+          <div class="input-group" id="firstnameGroup">
+            <input name="firstname" type="text" placeholder="First Name" />
             <small class="message"></small>
           </div>
 
-          <div class="input-group">
-            <input name="last name" type="text" placeholder="Last Name" />
+          <div class="input-group" id="lastnameGroup">
+            <input name="lastname" type="text" placeholder="Last Name" />
             <small class="message"></small>
           </div>
 
