--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <small class="message"></small>
           </div>
 
-          <div class="input-group">
+          <div class="input-group" id="EmailGroup">
             <input name="Email" type="text" placeholder="Email Address" />
             <small class="message"></small>
           </div>
 
-          <div class="input-group">
+          <div class="input-group" id="passwordGroup">
             <input name="password" type="password" placeholder="Password" />
             <small class="message"></small>
           </div>
