--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -12,47 +12,56 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
     <title>Web Training | Tip calculator app</title>
   </head>
   <body>
     <div class="calculator-container">
-      <div class="calculator">
+    <div class="calculator">
 
-        <div class="input-group">
-          <label for="">Bill</label>
-          <input type="text" name="" id="">
-          </div>
-          <div class="input-group">
-            <label for="">select tip%</label>
-            <div class="tips-group">
-              <button class="button">5%</button>
-              <button class="button">10%</button>
-              <button class="button">15%</button>
-              <button class="button">25%</button>
-              <button class="button">50%</button>
-              <input type="text" class="button" placeholder="custom">
-              </div>
-              </div>
-              <div class="input-group">
-                <label for="">Number of People</label>
-                <input type="text">
-              </div>
-              </div>
-              <div class="calculator-result">
-                <div class="tips-amount">
-                  <div class="tittle">Tips Amount / person</div>
-                  <div class="amount">$4.27</div>
-                </div>
-                <div class="tottal-amount calculation-amount">
-                  <div class="tittle">Total amount / person</div>
-                  <div class="amount">$52.22</div>
-              </div>
-              <button class="button">Reset</button>
-              </div>
+      <div class="input-group">
+        <label for="">Bill</label>
+        <input type ="text" name="" id="">
+      </div>
+
+      <div class="input-group">
+        <label for ="">Select tip %</label>
+        <div class="tips-group">
+          <button class="button">5%</button>
+          <button class="button">10%</button>
+          <button class="button">15%</button>
+          <button class="button">25%</button>
+          <button class="button">50%</button>
+          <input types="text" class="button" placeholder="Custom">
+        </div>
+      </div>
+
+      <div class="input-group">
+        <label for ="">Number of people</label>
+        <input types="text">
+      </div>
+      </div>
+
+
+    <div class="calculation-result">
+    <div class="tips-amount calculation-amount">
+      <div class="title">
+        <div class="main-title">Tips Amount</div>
+        <div class="subtitle">person</div>
+      </div>
+      <div class="amount">$4.27</div>
+    </div>
+    <div class="total-amount calculation-amount">
+      <div class="title">
+        <div class="main-title">Tips Amount</div>
+        <div class="subtitle">person</div>
+      </div>
+      <div class="amount">$52.22</div>
+      </div>
+    <button class="button">Reset</button>
+    </div>
     </div>
   </body>
 </html>
